fix: code scrollbar color

--- a/styles/_mdx.scss
+++ b/styles/_mdx.scss
@@ -102,6 +102,7 @@ iframe {
     display: block;
     color: #bdddff;
     color: #eee;
+    padding-bottom: 1rem;
 
     @include mediaquery('lg') {
       &::-webkit-scrollbar {
@@ -113,7 +114,7 @@ iframe {
       }
 
       &::-webkit-scrollbar-thumb {
-        background-color: var(--black-100);
+        background-color: #2f3c45;
         border-radius: 12px;
       }
     }
@@ -135,7 +136,7 @@ iframe {
     font-size: 1.6rem;
     display: inline;
     margin: 2px;
-
+    padding-bottom: 0;
     @include mediaquery('lg') {
       font-size: 1.7rem;
     }
